# embed_star

./: .dockerignore  .env.example  .env.production  CLAUDE.md  CONNECTION_POOLING.md  CONNECTION_TYPES.md  Cargo.toml  DEDUPLICATION_REMOVAL_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  PERFORMANCE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY_SUMMARY.md  README.md  check_db.sh  docker-compose.override.yml  docker-compose.yml  history.txt  prometheus.yml
.github/workflows/: ci.yml  release.yml
examples/: memory_test.rs  production_run.rs  test_health_check.rs  test_logging.rs  test_validation.rs  test_validation_failure.rs  validation_edge_cases.rs
migrations/: 0002_processing_locks.sql
src/: circuit_breaker.rs  cleanup.rs  config.rs  deduplication.rs  embedder.rs  embedding_cache.rs  embedding_validation.rs  error.rs  lib.rs  main.rs  metrics.rs  migration.rs  models.rs  pool.rs  pool_metrics.rs  process_batch.rs  rate_limiter.rs  retry.rs  server.rs  service.rs  shutdown.rs  surreal_client.rs  validation.rs
tests/: integration_test.rs  integration_tests.rs  test_together_api.rs
