[package]
name = "embed_star"
version = "0.1.0"
edition = "2021"

[lib]
name = "embed_star"
path = "src/lib.rs"

[[bin]]
name = "embed_star"
path = "src/main.rs"

[dependencies]
# Core dependencies matching main project
tokio = { version = "1.35", features = ["full"] }
surrealdb = { version = "1.5", features = ["protocol-ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# For embeddings
ollama-rs = "0.2"
async-openai = "0.20"
# For Together AI (using REST API)
reqwest = { version = "0.11", features = ["json"] }

# Environment and CLI
dotenv = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# For futures and async traits
futures = "0.3"
async-trait = "0.1"

# Production features
prometheus = { version = "0.13", features = ["process"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower_governor = "0.3"
governor = "0.6"
uuid = { version = "1.6", features = ["v4", "serde"] }
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
